--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -36,11 +36,8 @@
     {% endif %}
 
     <div id="content-main">
-        <div class="text-center">
-            <img src="/static/images/logoqltt.png" alt="" class="logo">
-        </div>
         <h4 class="text-center text-info title">
-            Hệ thống Nhận dạng văn bản
+            Quản lý trường cấp 3
         </h4>
         {% if user.is_authenticated %}
             <p class="errornote">
