--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -38,11 +38,8 @@
     {% endif %}
 
     <div id="content-main">
-        <div class="text-center">
-            <img src="/static/images/logoqltt.png" alt="" class="logo">
-        </div>
         <h4 class="text-center text-info title">
-            Hệ thống Nhận dạng văn bản
+            Quản lý trường cấp 3
         </h4>
         {% if user.is_authenticated %}
             <p class="errornote">
@@ -77,9 +74,6 @@
             {% endif %}
             <div class="submit-row">
                 <label>&nbsp;</label><input type="submit" value="{% trans 'Log in' %}">
-            </div>
-            <div>
-                <label>{% trans 'Account test: Demo / demo1234' %}</label>
             </div>
             <div class="submit-row">
                 {#                <input type="submit" value="{% trans 'Forgotten password' %}" style="width:49%;position:relative;float:left;">#}
